# pathfinder

./: .gitignore  CMakeLists.txt  README.md  build  install  run  runcmake  test
dokumentit/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3-4.md
dokumentointi/: maarittelydokumentti.md
pathfinder-demo/: .gitignore  CMakeLists.txt  README.md  build  installSFML  run  runcmake  test
pathfinder-demo/src/: CMakeLists.txt  DemoConfigurations.h  GameTimer.cpp  GameTimer.h  main.cpp  main.h
pathfinder-demo/src/controllers/: GameWorld.cpp  GameWorld.h  GraphicsController.cpp  GraphicsController.h  InputController.cpp  InputController.h  Updateable.h
pathfinder-demo/src/controllers/tools/: BuildTool.cpp  BuildTool.h  EndPointMover.cpp  EndPointMover.h  PointMover.cpp  PointMover.h  StartPointMover.cpp  StartPointMover.h  Tool.cpp  Tool.h  ToolController.cpp  ToolController.h
pathfinder-demo/src/models/: BlockGraph.cpp  BlockGraph.h  Terrain.h  TerrainBlock.cpp  TerrainBlock.h
pathfinder-demo/src/models/terrainblocks/: GrassBlock.cpp  GrassBlock.h  PlainBlock.cpp  PlainBlock.h  WallBlock.cpp  WallBlock.h  WaterBlock.cpp  WaterBlock.h
pathfinder-demo/tests/: CMakeLists.txt  mainTest.cpp
pathfinder-demo/tests/controllers/: GameWorldTest.cpp  GameWorldTest.h  InputControllerTest.cpp  InputControllerTest.h
pathfinder-demo/tests/models/: BlockGraphTest.cpp  BlockGraphTest.h
src/: CMakeLists.txt  main.cpp  main.h
src/algorithms/: OpenList.cpp  OpenList.h  PathFinder.cpp  PathFinder.h
src/algorithms/astar/: AStarPathFinder.cpp  AStarPathFinder.h
src/graphs/: ExtendedNode.cpp  ExtendedNode.h  ExtendedNodeGraph.cpp  ExtendedNodeGraph.h  ExtendedNodePointer.cpp  ExtendedNodePointer.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Point.cpp  Point.h
src/pathtools/: Heuristic.cpp  Heuristic.h  MovementCostCalculator.cpp  MovementCostCalculator.h  NeighbourCalculator.cpp  NeighbourCalculator.h  Path.cpp  Path.h  PathFinder.cpp  PathFinder.h
src/utilities/: CompassPosition.h  NeighbourCalculator.cpp  NeighbourCalculator.h  PriorityQueue.h
tests/: CMakeLists.txt
tests/algorithms/: OpenListTest.cpp  OpenListTest.h
tests/algorithms/astar/: AStarPathFinderTest.cpp  AStarPathFinderTest.h
tests/graphs/: ExtendedNodeGraphTest.cpp  ExtendedNodeGraphTest.h  ExtendedNodePointerTest.cpp  ExtendedNodePointerTest.h  ExtendedNodeTest.cpp  ExtendedNodeTest.h  GraphTest.cpp  GraphTest.h  NodeTest.cpp  NodeTest.h  PointTest.cpp  PointTest.h
tests/pathtools/: HeuristicTest.cpp  HeuristicTest.h  MovementCostCalculatorTest.cpp  MovementCostCalculatorTest.h  NeighbourCalculatorTest.cpp  NeighbourCalculatorTest.h  PathTest.cpp  PathTest.h
tests/utilities/: NeighbourCalculatorTest.cpp  NeighbourCalculatorTest.h  PriorityQueueTest.cpp  PriorityQueueTest.h
